--- a/Encriptador de texro/style.css
+++ b/Encriptador de texro/style.css
@@ -1,56 +1,58 @@
-body{
-    background-color: antiquewhite;
+    body{
+        background-color: antiquewhite;
 
-}
+    }
 
-.logo {
-    text-align: center;
-    padding: 50px;
+    .logo {
+        text-align: center;
+        padding: 50px;
+        justify-content: center;
+        
+    }
     
-  }
-  
-  img {
-    width: 10%;
-    vertical-align: middle;
+    img {
+        width: 10%;
+        vertical-align: middle;
+        
+    }
     
-  }
-  
 
-.titulo{
-    color: rgb(45, 114, 197);
-    font-size: 43px ;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-style: italic;
-    padding: 20px;
-    margin-left: 190px;
-}
+    .titulo{
+        color: rgb(45, 114, 197);
+        font-size: 43px ;
+        font-family: sans-serif;
+        font-weight: bold;
+        font-style: italic;
+        padding: 20px;
+        margin-left: 190px;
+    }
 
-.caja1, .caja2 {
-    width: 500px;
-    height: 300px;
-    box-sizing: border-box; /* Incluye el borde y el relleno dentro del tamaño de la caja */
-    border: 1px solid black;
-    border-radius: 5%;
-    margin: 20px;
-    padding: 10px;
-    background-color: rgb(221, 249, 249);
-    display: inline-block;  
-}
-textarea {
-    width: 100%;
-    height: 80%;
-    margin-bottom: 10px;
-  }
-
-  button {
-    width: 50%;
-    height: 10%;
-  }
-  
-.caja2 {
-    margin-left: 20px; /* Agrega un margen izquierdo a la segunda caja */
-}
+    .caja1, .caja2 {
+        width: 500px;
+        height: 300px;
+        box-sizing: border-box; /* Incluye el borde y el relleno dentro del tamaño de la caja */
+        border: 1px solid black;
+        border-radius: 5%;
+        margin: 20px;
+        padding: 10px;
+        background-color: rgb(221, 249, 249);
+        display: inline-block; 
+    }
+    textarea, .input {
+        width: 100%;
+        height: 80%;
+        margin-bottom: 10px;
+        text-align: top !important;
+    }
+    
+    button {
+        width: 50%;
+        height: 10%;
+    }
+    
+    .caja2 {
+        margin-left: 20px; /* Agrega un margen izquierdo a la segunda caja */
+    }
 
 
 
